Fix text alignment

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ a {
 
 .text {
     text-align: center;
+    width: 200px;
 }
 
 .part3 {
